# Atlas

./: .gitattributes  .gitignore  LICENSE  README.md  atlas.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  collectors.md  deploy-model.md  device-setup.md  eink-setup.md  running.md
scripts/: atlas-tmux.sh  demo.tape  make_screenshots.py
src/atlas/: __init__.py  __main__.py  app.py  bus.py  config.py  model.py  runtime.py
src/atlas/ai/: bundles.py  chat.py  client.py  context.py  insights.py
src/atlas/collectors/: __init__.py  backups.py  base.py  certs.py  cron.py  discovery.py  docker_.py  github_.py  http_health.py  nginx.py  postgres.py  security.py  system.py
src/atlas/cost/: hcloud.py
src/atlas/demo/: dataset.py
src/atlas/deploy/: __init__.py  orchestrator.py  verify.py
src/atlas/engine/: baseline.py  capacity.py  forecast.py  health.py  incidents.py  rules.py  scheduler.py
src/atlas/notify/: telegram.py
src/atlas/reports/: briefs.py
src/atlas/store/: __init__.py  audit.py  db.py  incidents.py  inventory.py  metrics.py  retention.py
src/atlas/transport/: __init__.py  base.py  local.py  ssh.py
src/atlas/tui/: clipboard.py
tests/: test_config.py
tests/fixtures/cron/: backup-log-failed.txt  backup-log-ok.txt  crond.txt  journal-cron.txt  quotelab-crontab.txt  (+1 more)
tests/test_ai/: test_client.py  test_context.py
tests/test_collectors/: test_parsers.py  test_security.py
tests/test_deploy/: test_invariant.py  test_orchestrator.py
tests/test_engine/: test_baseline.py  test_briefs.py  test_capacity.py  test_forecast.py  test_incidents.py  test_rules.py
tests/test_notify/: test_bot.py  test_telegram.py
tests/test_store/: test_retention.py  test_store.py
tests/test_tui/: test_clipboard.py  test_demo.py  test_smoke.py
(+29 files in other folders)
